stopped overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
 body {
   margin: 0px;
   background-color: rgb(0, 0, 0);
+  overflow-x: hidden;
 }
 
 li {
